blue-green/blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: blue-app
    namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
      replica: blue
  template:
    metadata:
      labels:
        app: myapp
        replica: blue
    spec:
      containers:
      - name: myapp
        image: saumik8763/my-custom-nginx:v1
        ports:
          - name: http
            containerPort: 80
