blue-green/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: default
spec:
  selector:
    app: myapp
    replica: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: NodePort
